<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorMain"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/rl_login_logo"
        android:layout_width="match_parent"
        android:layout_height="260dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:src="@mipmap/home" />
    </RelativeLayout>

    <android.support.v7.widget.CardView
        android:id="@+id/cv_login_logo"
        style="@style/login_ll_style"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/rl_login_logo"
        app:cardBackgroundColor="#20ffffff"
        app:cardCornerRadius="20dp"
        app:cardElevation="0dp">

        <LinearLayout
            android:id="@+id/ll_login_user"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:orientation="horizontal">

            <EditText
                android:id="@+id/edt_login_user"
                style="@style/login_edit_style"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:hint="@string/edit_username"
                android:inputType="phone"
                android:paddingBottom="10dp"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:paddingTop="10dp" />
        </LinearLayout>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:layout_marginTop="20dp"
        android:id="@+id/cv_login_password"
        style="@style/login_ll_style"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/cv_login_logo"
        app:cardBackgroundColor="#20ffffff"
        app:cardCornerRadius="20dp"
        app:cardElevation="0dp">

        <LinearLayout
            android:id="@+id/ll_login_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/ll_login_user"
            android:orientation="horizontal">

            <EditText
                style="@style/login_edit_style"
                android:id="@+id/edt_login_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:hint="@string/edit_password"
                android:maxLength="16"
                android:inputType="textPassword"
                android:paddingBottom="10dp"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:paddingTop="10dp" />
        </LinearLayout>
    </android.support.v7.widget.CardView>


    <android.support.v7.widget.CardView
        android:clickable="true"
        android:foreground="?android:attr/selectableItemBackground"
        android:id="@+id/cv_login_login"
        style="@style/login_ll_style"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/cv_login_password"
        android:layout_marginTop="10dp"
        app:cardBackgroundColor="@color/colorWhile"
        app:cardCornerRadius="20dp"
        app:cardElevation="2dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:id="@+id/txt_login_btnlogin"
            android:layout_height="40dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/ok"
                android:textColor="@color/login_txt_color" />

        </RelativeLayout>


    </android.support.v7.widget.CardView>


</RelativeLayout>